--- a/pages/login/index.wxss
+++ b/pages/login/index.wxss
@@ -1,11 +1,12 @@
-/* pages/login/index.wxss */
-.btn{
-    width: auto;
-    height: 100rpx;
-    background: black;
-    color: #fff;
-    margin: 50rpx 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.login {
+  padding: 200rpx 35rpx 0;
+}
+
+.login__title {
+  font-size: 44rpx;
+  margin-bottom: 100rpx;
+}
+
+.login__btn {
+  margin-top: 150rpx;
 }
