--- a/app.wxss
+++ b/app.wxss
@@ -1,4 +1,7 @@
-/**app.wxss**/
-view{
-    margin: 10rpx;
+@import '/miniprogram_npm/@vant/weapp/common/index.wxss';
+
+page {
+    font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Helvetica,
+        Segoe UI, Arial, Roboto, 'PingFang SC', 'miui', 'Hiragino Sans GB', 'Microsoft Yahei',
+        sans-serif;
 }
