--- a/components/container/index.scss
+++ b/components/container/index.scss
@@ -1,8 +1,9 @@
+@import "../../assets/css/variables";
 .container {
   min-height: 100vh;
-  padding: 30rpx;
-  --button-primary-background-color: #1cbc9a;
-  --button-primary-border-color: #1cbc9a;
+  background-color: $bg-color;
+  --button-primary-background-color: $theme-color;
+  --button-primary-border-color: $theme-color;
 
   &--gap {
     padding-top: 20rpx;
