--- a/components/container/index.wxml
+++ b/components/container/index.wxml
@@ -1,5 +1,3 @@
-<view
-  class="container [ isGray ? 'container--gray' : '', isGap ? 'container--gap' : '' ]"
->
+<view class="container {{ isGray ? 'container--gray' : '' }} {{isGap ? 'container--gap' : ''}}">
   <slot></slot>
 </view>
