--- a/components/scroll/index.wxss
+++ b/components/scroll/index.wxss
@@ -12,7 +12,7 @@
   height: 100%;
   position: relative;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .scroll__refresh {
@@ -36,7 +36,7 @@
   left: 0;
   right: 0;
   -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
+          transform: translateY(-50%);
   text-align: center;
   color: #999999;
 }
@@ -59,7 +59,7 @@
   text-align: center;
   opacity: 0;
   -webkit-transform: scale(0);
-  transform: scale(0);
+          transform: scale(0);
   color: #1cbc9a;
 }
 
@@ -73,7 +73,7 @@
   background-color: currentColor;
   opacity: 0.7;
   -webkit-transform: scaleX(0);
-  transform: scaleX(0);
+          transform: scaleX(0);
   -webkit-transition: -webkit-transform 0.3s ease-in-out;
   transition: -webkit-transform 0.3s ease-in-out;
   transition: transform 0.3s ease-in-out;
@@ -94,23 +94,22 @@
 .success--show {
   opacity: 1;
   -webkit-transform: scale(1);
-  transform: scale(1);
+          transform: scale(1);
 }
 
 .success--show:after {
   -webkit-transform: scaleX(1);
-  transform: scaleX(1);
+          transform: scaleX(1);
 }
 
 .success--tran {
   opacity: 0;
   -webkit-transform: translateY(-100%);
-  transform: translateY(-100%);
+          transform: translateY(-100%);
   -webkit-transition: opacity 0.35s linear, -webkit-transform 0.35s linear;
   transition: opacity 0.35s linear, -webkit-transform 0.35s linear;
   transition: opacity 0.35s linear, transform 0.35s linear;
-  transition: opacity 0.35s linear, transform 0.35s linear,
-    -webkit-transform 0.35s linear;
+  transition: opacity 0.35s linear, transform 0.35s linear, -webkit-transform 0.35s linear;
 }
 
 .empty {
@@ -150,9 +149,9 @@
   width: 4rpx;
   height: 16rpx;
   -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
+          transform: rotate(45deg);
   -webkit-transform-origin: 100% 100%;
-  transform-origin: 100% 100%;
+          transform-origin: 100% 100%;
   background: #a5a5a5;
   border-radius: 4rpx;
 }
@@ -165,16 +164,16 @@
   width: 4rpx;
   height: 16rpx;
   -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
+          transform: rotate(-45deg);
   -webkit-transform-origin: 0% 100%;
-  transform-origin: 0% 100%;
+          transform-origin: 0% 100%;
   background: #a5a5a5;
   border-radius: 4rpx;
 }
 
 .arrow.rotate {
   -webkit-transform: rotate(-180deg);
-  transform: rotate(-180deg);
+          transform: rotate(-180deg);
 }
 
 .loading {
@@ -203,123 +202,121 @@
   background-color: #a5a5a5;
   border-radius: 4rpx;
   -webkit-animation: fadeDelay 1.2s infinite ease-in-out both;
-  animation: fadeDelay 1.2s infinite ease-in-out both;
+          animation: fadeDelay 1.2s infinite ease-in-out both;
 }
 
 .loading__item:nth-child(2) {
   -webkit-transform: rotate(30deg);
-  transform: rotate(30deg);
+          transform: rotate(30deg);
 }
 
 .loading__item:nth-child(2):before {
   -webkit-animation-delay: -1.1s;
-  animation-delay: -1.1s;
+          animation-delay: -1.1s;
 }
 
 .loading__item:nth-child(3) {
   -webkit-transform: rotate(60deg);
-  transform: rotate(60deg);
+          transform: rotate(60deg);
 }
 
 .loading__item:nth-child(3):before {
   -webkit-animation-delay: -1s;
-  animation-delay: -1s;
+          animation-delay: -1s;
 }
 
 .loading__item:nth-child(4) {
   -webkit-transform: rotate(90deg);
-  transform: rotate(90deg);
+          transform: rotate(90deg);
 }
 
 .loading__item:nth-child(4):before {
   -webkit-animation-delay: -0.9s;
-  animation-delay: -0.9s;
+          animation-delay: -0.9s;
 }
 
 .loading__item:nth-child(5) {
   -webkit-transform: rotate(120deg);
-  transform: rotate(120deg);
+          transform: rotate(120deg);
 }
 
 .loading__item:nth-child(5):before {
   -webkit-animation-delay: -0.8s;
-  animation-delay: -0.8s;
+          animation-delay: -0.8s;
 }
 
 .loading__item:nth-child(6) {
   -webkit-transform: rotate(150deg);
-  transform: rotate(150deg);
+          transform: rotate(150deg);
 }
 
 .loading__item:nth-child(6):before {
   -webkit-animation-delay: -0.7s;
-  animation-delay: -0.7s;
+          animation-delay: -0.7s;
 }
 
 .loading__item:nth-child(7) {
   -webkit-transform: rotate(180deg);
-  transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 
 .loading__item:nth-child(7):before {
   -webkit-animation-delay: -0.6s;
-  animation-delay: -0.6s;
+          animation-delay: -0.6s;
 }
 
 .loading__item:nth-child(8) {
   -webkit-transform: rotate(210deg);
-  transform: rotate(210deg);
+          transform: rotate(210deg);
 }
 
 .loading__item:nth-child(8):before {
   -webkit-animation-delay: -0.5s;
-  animation-delay: -0.5s;
+          animation-delay: -0.5s;
 }
 
 .loading__item:nth-child(9) {
   -webkit-transform: rotate(240deg);
-  transform: rotate(240deg);
+          transform: rotate(240deg);
 }
 
 .loading__item:nth-child(9):before {
   -webkit-animation-delay: -0.4s;
-  animation-delay: -0.4s;
+          animation-delay: -0.4s;
 }
 
 .loading__item:nth-child(10) {
   -webkit-transform: rotate(270deg);
-  transform: rotate(270deg);
+          transform: rotate(270deg);
 }
 
 .loading__item:nth-child(10):before {
   -webkit-animation-delay: -0.3s;
-  animation-delay: -0.3s;
+          animation-delay: -0.3s;
 }
 
 .loading__item:nth-child(11) {
   -webkit-transform: rotate(300deg);
-  transform: rotate(300deg);
+          transform: rotate(300deg);
 }
 
 .loading__item:nth-child(11):before {
   -webkit-animation-delay: -0.2s;
-  animation-delay: -0.2s;
+          animation-delay: -0.2s;
 }
 
 .loading__item:nth-child(12) {
   -webkit-transform: rotate(330deg);
-  transform: rotate(330deg);
+          transform: rotate(330deg);
 }
 
 .loading__item:nth-child(12):before {
   -webkit-animation-delay: -0.1s;
-  animation-delay: -0.1s;
+          animation-delay: -0.1s;
 }
 
 @keyframes fadeDelay {
-  0%,
-  39%,
-  100% {
+  0%, 39%, 100% {
     opacity: 0.2;
   }
   40% {
@@ -328,9 +325,7 @@
 }
 
 @-webkit-keyframes fadeDelay {
-  0%,
-  39%,
-  100% {
+  0%, 39%, 100% {
     opacity: 0.2;
   }
   40% {
