--- a/pages/tabbar/home/index.wxml
+++ b/pages/tabbar/home/index.wxml
@@ -1,7 +1,9 @@
-<van-tabs sticky bind:change='handleChange' active='{{active}}' color='#1cbc9a' title-active-color='#1cbc9a' border wx:if='{{navs.length}}' swipeable animated>
-  <van-tab title="{{item.title}}" wx:for='{{navs}}' wx:key="index">
-    <scroll requesting="{{item.requesting}}" end="{{item.end}}" empty-show="{{!item.list.length}}" list-count="{{item.list.length}}" has-top bind:refresh="handleRefresh" bind:more="fetchData">
-      <list-item wx:for='{{item.list}}' wx:for-item="itList" wx:key="index"></list-item>
-    </scroll>
-  </van-tab>
-</van-tabs>
+<container>
+  <van-tabs sticky bind:change='handleChange' active='{{active}}' color='#1cbc9a' title-active-color='#1cbc9a' border wx:if='{{navs.length}}' swipeable animated>
+    <van-tab title="{{item.title}}" wx:for='{{navs}}' wx:key="index">
+      <scroll requesting="{{item.requesting}}" end="{{item.end}}" empty-show="{{!item.list.length}}" list-count="{{item.list.length}}" has-top bind:refresh="handleRefresh" bind:more="fetchData">
+        <list-item wx:for='{{item.list}}' wx:for-item="itList" wx:key="index"></list-item>
+      </scroll>
+    </van-tab>
+  </van-tabs>
+</container>
