开发中 添加答题页面ui

--- a/components/container/index.wxss
+++ b/components/container/index.wxss
@@ -2,6 +2,7 @@
   min-height: 100vh;
   --button-primary-background-color: #1cbc9a;
   --button-primary-border-color: #1cbc9a;
+  --sidebar-selected-border-color: #1cbc9a;
 }
 
 .container--gap {
