--- a/components/container/index.scss
+++ b/components/container/index.scss
@@ -3,6 +3,7 @@
   min-height: 100vh;
   --button-primary-background-color: #1cbc9a;
   --button-primary-border-color: #1cbc9a;
+  --sidebar-selected-border-color: #1cbc9a;
 
   &--gap {
     padding-top: 20rpx;
