--- a/pages/tabbar/answer/index.wxml
+++ b/pages/tabbar/answer/index.wxml
@@ -1,10 +1,38 @@
-<container>
-  <view class="u-flex">
-    <van-sidebar active-key="{{ activeKey }}" bind:change="onChange">
-      <van-sidebar-item title="标签名 1" />
-      <van-sidebar-item title="标签名 2" />
-      <van-sidebar-item title="标签名 3" />
-    </van-sidebar>
-    <view class=""></view>
-  </view>
+<!--
+ * @Author: yukang 1172248038@qq.com
+ * @Description: 答题
+ * @Date: 2021-01-05 22:40:10
+ * @LastEditTime: 2021-01-08 00:03:30
+-->
+<container class="answer">
+  <van-tabs
+    sticky
+    bind:change="handleChange"
+    active="{{ active }}"
+    color="#1cbc9a"
+    title-active-color="#1cbc9a"
+    wx:if="{{ navs.length }}"
+    swipeable
+    tab-active-class="home__tab__active"
+    border
+  >
+    <van-tab
+      title="{{ item.name }}"
+      wx:for="{{ navs }}"
+      wx:key="id"
+      tab-active-class="home__tab__active"
+    >
+      <view class="u-flex u-col-top">
+        <van-sidebar
+          active-key="{{ activeKey }}"
+          bind:change="onChange"
+          wx:if="{{item.modules.length}}"
+          custom-class="answer__box"
+        >
+          <van-sidebar-item title="{{item.name}}" wx:for="{{item.modules}}" wx:key="id" />
+        </van-sidebar>
+        <view>{{navs[active].modules.length}}</view>
+      </view>
+    </van-tab>
+  </van-tabs>
 </container>
