开发中 完善答题功能

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,5 +1,5 @@
 // 颜色
-$text-normal: #222;
+$text-normal: #333;
 $text-light: #666;
 $text-lighter: #999;
 $text-lightest: #c2c2c2;
@@ -12,7 +12,7 @@ $theme-color-disabled: #98bcf2;
 $theme-color-light: #e7fffb;
 
 // 边框
-$o-border-color: #e4e7ed;
+$border-color: #e4e7ed;
 
 // 加粗
 $font-weight-bold: 600;
