--- a/components/container/index.wxss
+++ b/components/container/index.wxss
@@ -3,6 +3,7 @@
   --button-primary-background-color: #1cbc9a;
   --button-primary-border-color: #1cbc9a;
   --sidebar-selected-border-color: #1cbc9a;
+  --tag-primary-color: #1cbc9a;
 }
 
 .container--gap {
