--- a/wxs/utils.wxs
+++ b/wxs/utils.wxs
@@ -1,10 +1,25 @@
+/*
+ * @Author: yukang 1172248038@qq.com
+ * @Description:工具类
+ * @Date: 2021-01-06 13:07:47
+ * @LastEditTime: 2021-01-09 13:38:37
+ */
 /* eslint-disable */
-var bem = require('./bem.wxs');
-var memoize = require('./memoize.wxs');
-var addUnit = require('./add-unit.wxs');
+var bem = require("./bem.wxs");
+var memoize = require("./memoize.wxs");
+var addUnit = require("./add-unit.wxs");
+
+var includes = function (arr, val) {
+  return (
+    arr.filter(function (item) {
+      return item === val;
+    }).length > 0
+  );
+};
 
 module.exports = {
   bem: memoize(bem),
   memoize: memoize,
-  addUnit: addUnit
+  addUnit: addUnit,
+  includes: includes,
 };
