--- a/pages/answer/index/index.wxss
+++ b/pages/answer/index/index.wxss
@@ -34,7 +34,7 @@
 .answer__swipe-item__ul__li {
   background: #f5f5f5;
   border-radius: 10rpx;
-  padding: 30rpx;
+  padding: 30rpx 25rpx;
   margin-bottom: 24rpx;
   position: relative;
 }
@@ -65,7 +65,7 @@
   left: 0;
   right: 0;
   -webkit-box-shadow: 0px -10px 10px 0px rgba(153, 153, 153, 0.05);
-  box-shadow: 0px -10px 10px 0px rgba(153, 153, 153, 0.05);
+          box-shadow: 0px -10px 10px 0px rgba(153, 153, 153, 0.05);
   padding: 30rpx;
   color: #999;
   font-size: 28rpx;
@@ -78,8 +78,8 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .answer__swipe-item__footer__left text,
