开发中 完善答题模块

--- a/components/container/index.scss
+++ b/components/container/index.scss
@@ -5,7 +5,7 @@
   --button-primary-border-color: #1cbc9a;
   --sidebar-selected-border-color: #1cbc9a;
   --tag-primary-color: #1cbc9a;
-
+  --count-down-font-size: 32rpx;
   &--gap {
     padding-top: 20rpx;
   }
