--- a/components/container/index.wxss
+++ b/components/container/index.wxss
@@ -4,6 +4,7 @@
   --button-primary-border-color: #1cbc9a;
   --sidebar-selected-border-color: #1cbc9a;
   --tag-primary-color: #1cbc9a;
+  --count-down-font-size: 32rpx;
 }
 
 .container--gap {
