--- a/pages/answer/index/index.wxss
+++ b/pages/answer/index/index.wxss
@@ -3,14 +3,19 @@
 }
 
 .answer__swipe {
-  height: calc(100vh - 124rpx);
+  height: calc(100vh - 197rpx);
+  overflow: auto;
   width: 100wh;
-  margin: 30rpx 0;
+  margin: 30rpx 0 0;
   position: relative;
 }
 
+.answer__swipe swiper-item {
+  overflow: auto;
+}
+
 .answer__swipe-item {
-  padding: 0 30rpx;
+  padding: 0 30rpx 30rpx;
 }
 
 .answer__swipe-item__checkbox {
@@ -69,6 +74,7 @@
   padding: 30rpx;
   color: #999;
   font-size: 28rpx;
+  background: #fff;
 }
 
 .answer__swipe-item__footer__left,
