--- a/pages/login/index.wxml
+++ b/pages/login/index.wxml
@@ -1,6 +1,11 @@
+<!--
+ * @Author: yukang 1172248038@qq.com
+ * @Description: 
+ * @Date: 2021-01-05 21:27:27
+ * @LastEditTime: 2021-01-09 16:14:01
+-->
 <container>
   <van-notify id="van-notify" />
-  <van-toast id="van-toast" />
   <van-dialog id="van-dialog" />
   <view class="login">
     <view class="login__title">需要提供以下信息绑定账户：</view>
