--- a/pages/profile/files/index.scss
+++ b/pages/profile/files/index.scss
@@ -1,7 +1,6 @@
 @import "../../../assets/css/variables";
 .files {
   &__btn {
-    padding: 80rpx $padding-md;
-    font-size: 12px;
+    padding: 80rpx $padding-xs;
   }
 }
