--- a/wxs/utils.wxs
+++ b/wxs/utils.wxs
@@ -2,7 +2,7 @@
  * @Author: yukang 1172248038@qq.com
  * @Description:工具类
  * @Date: 2021-01-06 13:07:47
- * @LastEditTime: 2021-01-09 13:38:37
+ * @LastEditTime: 2021-01-14 23:03:42
  */
 /* eslint-disable */
 var bem = require("./bem.wxs");
@@ -17,9 +17,14 @@ var includes = function (arr, val) {
   );
 };
 
+var zeroFill = function (val) {
+  return val < 10 ? "0" + val : val;
+};
+
 module.exports = {
   bem: memoize(bem),
   memoize: memoize,
   addUnit: addUnit,
   includes: includes,
+  zeroFill: zeroFill,
 };
